--- a/foundations/html-section/recipes-final-project/index.html
+++ b/foundations/html-section/recipes-final-project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
@@ -12,6 +12,7 @@
     <p>Check our recipes</p>
     <ul>
         <li><a href="recipes/nanas-apple-crumble.html">Nana's Apple Crumble</a></li>
+        <li><a href="recipes/lemon-chicken-tender.html">Lemon Thyme Chicken Tenders</a></li>
     </ul>
 </body>
 </html>
