add lasagna recipe

--- a/foundations/html-section/recipes-final-project/index.html
+++ b/foundations/html-section/recipes-final-project/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="recipes/nanas-apple-crumble.html">Nana's Apple Crumble</a></li>
         <li><a href="recipes/lemon-chicken-tender.html">Lemon Thyme Chicken Tenders</a></li>
+        <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
     </ul>
 </body>
 </html>
