--- a/foundations/html-section/recipes-final-project/index.html
+++ b/foundations/html-section/recipes-final-project/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
+    <img src="images/food-meme.jpg" alt="mr-incredible">
     <p>Check our recipes</p>
     <ul>
         <li><a href="recipes/nanas-apple-crumble.html">Nana's Apple Crumble</a></li>
