--- a/foundations/js-section/basic-excercises/objects/index.html
+++ b/foundations/js-section/basic-excercises/objects/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Objects practice</title>
-    <script src="array-cardio.js" defer></script>
+    <script src="array-cardio2.js" defer></script>
 </head>
 <body>
     <h1>Objects and arrays practice</h1>
